--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -2,5 +2,12 @@
   "suggest.autoTrigger": "always",
   "suggest.echodocSupport": true,
   "eslint.enable": false,
-  "coc.preferences.formatOnSaveFiletypes": ["*"]
+  "coc.preferences.formatOnSaveFiletypes": ["*"],
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.previewAction.onHover": false,
+  "explorer.keyMappings": {
+    "<cr>": ["expandable?", "expand", "open"],
+    "v": "open:vsplit"
+  }
 }
