--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -9,5 +9,6 @@
   "explorer.keyMappings": {
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
-  }
+  },
+  "snippets.userSnippetsDirectory": "~/.config/nvim/snips"
 }
